Add French translation

--- a/mayday/app/src/main/res/values/strings.xml
+++ b/mayday/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="sosDefaultNumber">581 996 3350</string>
     <string name="triggerNumberText">Trigger number</string>
     <string name="sosNumberText">Sos number</string>
-    <string name="description">When emetting a call to the trigger number, Mayday will automaticaly send a SMS to the SOS number containing the GPS location of the phone.</string>
+    <string name="description">When emitting a call to the trigger number, Mayday will automatically send a SMS to the Sos number containing the GPS location of the phone.</string>
 </resources>
